* irc: check SSL certificates (task #7492)
* irc: add option to use same nick color in channel and private (task #9870)
* irc: add missing command 275 (patch #6952)
* irc: add commands /sajoin, /samode, /sanick, /sapart, /saquit (task #9770)
* irc: add options for CTCP, to block/customize CTCP reply (task #9693)
* irc: add missing CTCP: clientinfo, finger, source, time, userinfo (task #7270)
* irc: improve error management on socket error (recv/send)
* irc: improve mask used by command /kickban
* xfer: add missing charset decoding/encoding for IRC DCC chat (bug #27482)
* gui: fix message "Day changed to", sometimes displayed at wrong time
  (bug #26959)
* gui: fix bug with URL selection in some terminals (caused by horizontal lines)
  (bug #27700)
* gui: use default auto completion for arguments of unknown commands
* gui: fix alignment problem for buffer name when a merged buffer is closed
  (bug #27617)
* gui: update hotlist when a buffer is closed (bug #27470), remove buffer from
  hotlist when buffer is cleared (bug #27530)
* gui: fix /input history_global_next: reset input content when last command in
  history is reached
* api: fix function weechat_bar_set for python/lua/ruby (patch #6912)

Version 0.3.0 (2009-09-06)
--------------------------

* irc: add irc plugin (replaces old IRC code in core) (task #6217)
* irc: add smart join/part/quit message filter (task #8503)
* irc: use of many addresses for servers (auto-switch when a connexion fails),
  nicks are now set with one option "nicks" (task #6088)
* irc: add some colors in messages from server (for text and nicks)
  (task #8926)
* irc: add color decoding in title for IRC channels (task #6030)
* irc: fix lock with SSL servers when connection fails, and when
  disconnecting during connection problem (bug #17584)
* irc: command /whois is now authorized in private without argument
  (task #7482)
* irc: fix private buffer name with irssi proxy (bug #26589)