@@ -40,16 +40,16 @@
   pseudo: pseudo ou hôte pour le bannissement
 ........................................
 
-&bull; *`/connect`* `[-all [-nojoin] | nom_serveur [nom_serveur ...] [-nojoin] | nom/IP [-port port] [-ipv6] [-ssl]]`::
+&bull; *`/connect`* `[-all [-nojoin] | nom_serveur [nom_serveur ...] [-nojoin] | nom[/port] [-ipv6] [-ssl]]`::
 
 ........................................
   se connecter à un/plusieurs serveur(s) IRC
 
          -all: se reconnecter à tous les serveurs
-  nom_serveur: nom du serveur pour se connecter
+  nom_serveur: nom du serveur interne pour se connecter (le serveur doit avoir été créé par /server add)
       -nojoin: ne rejoindre aucun canal (même si l'autojoin est activé pour le serveur)
-       nom/IP: nom/IP pour se connecter
-         port: port pour le serveur (nombre entier, 6667 par défaut)
+          nom: nom (ou adresse IP) d'un serveur
+         port: port pour le serveur (6667 par défaut)
          ipv6: utiliser le protocole IPv6
           ssl: utiliser le protocole SSL
 ........................................
